--- a/epolice/templates/about.html
+++ b/epolice/templates/about.html
@@ -30,7 +30,7 @@
         <div class="row align-items-center">
             <div class="col-lg-6">
                 <div class="about-img">
-                    <img src="{% static 'img/about.jpg' %}" alt="Image">
+                    <img src="{% static 'img/download.jpg' %}" alt="Image">
                 </div>
             </div>
             <div class="col-lg-6">
