--- a/epolice/templates/contact.html
+++ b/epolice/templates/contact.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="contact-info-text">
                             <h3>Email Us</h3>
-                            <p>info@example.com</p>
+                            <p>mahima2006mistry@gmail.com</p>
                         </div>
                     </div>
                 </div>
